# openclaw-skills

skills/entropy-audit/assets/tool/: pyproject.toml
skills/entropy-audit/assets/tool/entropy_audit/: AGENTS.md  CLAUDE.md  CODEX.md  __init__.py  calibration.py  cli.py  config.py  entropy.calibration.toml  entropy.config.toml  utils.py
skills/entropy-audit/assets/tool/entropy_audit/code_entropy/: __init__.py
skills/entropy-audit/assets/tool/entropy_audit/collectors/: __init__.py  code_entropy_collector.py
skills/entropy-audit/assets/tool/entropy_audit/lang/: __init__.py  base.py  registry.py
skills/entropy-audit/assets/tool/entropy_audit/lang/java/: __init__.py  adapter.py  calculator.py  details.py  project_profile.py  runner.py  scoring_formula.py  scoring_v1_engine.py  scoring_v1_schema.py
skills/entropy-audit/assets/tool/entropy_audit/lang/java/analyzers/: __init__.py  behavior.py  cognition.py  semantic.py  structure.py  style.py
skills/entropy-audit/assets/tool/entropy_audit/lang/java/templates/: entropy.calibration.toml.tmpl  entropy.config.toml.tmpl
skills/entropy-audit/assets/tool/entropy_audit/lang/java/tools/checkstyle/: README.md
skills/entropy-audit/assets/tool/entropy_audit/lang/java/tools/checkstyle/jdk17/: checkstyle.xml  suppressions.xml
skills/entropy-audit/assets/tool/entropy_audit/lang/java/tools/checkstyle/jdk8/: checkstyle.xml  suppressions.xml
skills/entropy-audit/assets/tool/entropy_audit/models/: __init__.py
skills/entropy-audit/assets/tool/entropy_audit/reporter/: __init__.py  html_dashboard.py  rule_catalog.py
(+28 files in other folders)
